# ForMuhamet

./: .gitignore  .gitmodules  CMakeLists.txt  Combo_test.cpp  Graph_test.cpp  MakeNetworks.py  SDA_test.cpp  SdaEpiProblem.hpp  SdaProblem_NSGA2.hpp  SdaProblem_SGA.hpp  auto_runner.py  constants.h  exampleGraph.txt  main.cpp  main.h  nsga2.cpp  pagmoTest.cpp  rng.h  sga.cpp
Graph/: Graph.cpp  Graph.h
NSGA2/: SdaProblem_NSGA2.hpp  extract_best_networks.cpp  nsga2.cpp
SDA/: SDA.cpp  SDA.h
SGA/: SdaProblem_SGA.hpp  sga.cpp
